--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
     "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check",
     "cp:idl": "cp -f ./target/idl/crowdfunding.json ./frontend/src/types/crowdfunding/crowdfunding-idl.json; cp -f ./target/types/crowdfunding.ts ./frontend/src/types/crowdfunding/crowdfunding.ts"
   },
+  "packageManager": "yarn@1.22.22",
   "dependencies": {
-    "@coral-xyz/anchor": "^0.28.0"
+    "@coral-xyz/anchor": "^0.30.0"
   },
   "devDependencies": {
-    "chai": "^4.3.4",
-    "mocha": "^9.0.3",
+    "chai": "^5.1.1",
+    "mocha": "^10.4.0",
     "ts-mocha": "^10.0.0",
-    "@types/bn.js": "^5.1.0",
-    "@types/chai": "^4.3.0",
-    "@types/mocha": "^9.0.0",
-    "typescript": "^4.3.5",
-    "prettier": "^2.6.2"
+    "@types/bn.js": "^5.1.5",
+    "@types/chai": "^4.3.16",
+    "@types/mocha": "^10.0.6",
+    "typescript": "^5.4.5",
+    "prettier": "^3.2.5"
   }
 }
