--- a/airdrop/package.json
+++ b/airdrop/package.json
@@ -1,10 +1,10 @@
 {
   "name": "airdrop",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.ts",
   "license": "MIT",
   "dependencies": {
-    "@solana/web3.js": "^1.91.8"
+    "@solana/web3.js": "1.91.8"
   },
   "devDependencies": {},
   "scripts": {
