--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,22 +5,24 @@
   "type": "module",
   "packageManager": "yarn@1.22.22",
   "dependencies": {
-    "@project-serum/anchor": "^0.26.0",
-    "@solana/wallet-adapter-wallets": "^0.19.32",
-    "@solana/web3.js": "^1.91.8",
-    "bootstrap": "^5.3.3",
-    "buffer": "^6.0.3",
-    "react": "^18.3.1",
-    "react-bootstrap": "^2.10.2",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.23.1"
+    "@project-serum/anchor": "0.26.0",
+    "@solana/wallet-adapter-wallets": "0.19.32",
+    "@solana/web3.js": "1.91.8",
+    "bootstrap": "5.3.3",
+    "buffer": "6.0.3",
+    "react": "18.3.1",
+    "react-bootstrap": "2.10.2",
+    "react-dom": "18.3.1",
+    "react-router-dom": "6.23.1",
+    "sweetalert2": "11.11.0",
+    "sweetalert2-react-content": "5.0.7"
   },
   "devDependencies": {
-    "@types/react": "^18.3.2",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "typescript": "^5.4.5",
-    "vite": "^5.2.11"
+    "@types/react": "18.3.2",
+    "@types/react-dom": "18.3.0",
+    "@vitejs/plugin-react": "4.2.1",
+    "typescript": "5.4.5",
+    "vite": "5.2.11"
   },
   "scripts": {
     "dev": "vite",
